--- a/index.html
+++ b/index.html
@@ -147,10 +147,198 @@
 </section>
     <!-- banner section exit-->
 
+    <!-- about section -->
+    <section id="about" class="about_wrapper">
+        <div class="container">
+            <div class="row flex-lg-row flex-column-reverse">
+                <div class="col-lg-6 text-center text-lg-start">
+                    <h3>welcome to <span>Hotel <br class="d-none d-lg-block"> the haven </span> of your weekend </h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et distinctio corporis dolor laborum recusandae tempore accusamus doloribus quaerat consequuntur. Recusandae modi, provident ducimus ipsum vitae quibusdam natus qui placeat doloribus.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit et, perspiciatis nesciunt vitae architecto amet.</p>
+                    <a href="#" class="main-btn mt-4">explore</a>
+                </div>
+                <div class="col-lg-6 mb-4 mb-lg-0 ps-lg-4 text-center">
+                    <img src="images/about-img.svg" class="img-fluid" alt="about">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about section exit-->
+
+    <!-- room section -->
+    <section id="rooms" class="rooms_wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 section-title text-center mb-5">
+                    <h6>What I can do for you</h6>
+                    <h3>Our Favorite Rooms</h3>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-md-4 mb-4 mb-lg-8">
+                    <div class="room-items">
+                        <img src="./images/room/room1.webp" class="img-fluid" alt="">
+                        <div class="room-item-wrap">
+                            <div class="room-content">
+                                <h5 class="text-white mb-lg-5 text-decoration-underline">Royal Suit</h5>
+                                <p class="text-white">Discover five of our favourite dresses from our new collection that are destined to be worn and loved immedictely</p>
+                                <p class="text-white fw-bold mt-lg-4">$220 / per night</p>
+                                <a href="#" class="main-btn border-white text-white mt-lg-5">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-4 mb-lg-8">
+                    <div class="room-items">
+                        <img src="./images/room/room2.webp" class="img-fluid" alt="">
+                        <div class="room-item-wrap">
+                            <div class="room-content">
+                                <h5 class="text-white mb-lg-5 text-decoration-underline">Royal Suit</h5>
+                                <p class="text-white">Discover five of our favourite dresses from our new collection that are destined to be worn and loved immedictely</p>
+                                <p class="text-white fw-bold mt-lg-4">$220 / per night</p>
+                                <a href="#" class="main-btn border-white text-white mt-lg-5">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-4 mb-lg-8">
+                    <div class="room-items">
+                        <img src="./images/room/room3.webp" class="img-fluid" alt="">
+                        <div class="room-item-wrap">
+                            <div class="room-content">
+                                <h5 class="text-white mb-lg-5 text-decoration-underline">Royal Suit</h5>
+                                <p class="text-white">Discover five of our favourite dresses from our new collection that are destined to be worn and loved immedictely</p>
+                                <p class="text-white fw-bold mt-lg-4">$220 / per night</p>
+                                <a href="#" class="main-btn border-white text-white mt-lg-5">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- room section exit-->
+
+    <!-- services section -->
+    <section id="services" class="services_wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 section-title text-center mb-5">
+                    <h6>we are here for you</h6>
+                    <h3>our awesome services</h3>
+                </div>
+            </div>
+
+            <div class="row align-items-center service-item-wrap">
+
+                <div class="col-lg-7 p-lg-0">
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="spa" role="tabpanel">
+                            <img src="./images/services/service1.webp" alt="">
+                        </div>
+                        <div class="tab-pane fade" id="resturent" role="tabpanel">
+                            <img src="./images/services/service2.webp" alt="">
+                        </div>
+                        <div class="tab-pane fade" id="swimming" role="tabpanel">
+                            <img src="./images/services/service3.webp" alt="">
+                        </div>
+                        <div class="tab-pane fade" id="conference" role="tabpanel">
+                            <img src="./images/services/service6.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-5 position-relative">
+                    <div class="services-menu-area">
+                        <ul class="nav">
+                            <li>
+                                <a data-bs-toggle="tab" href="#spa" class="active">
+                                    <span class="service-icon">
+                                        <img src="./images/services/service-icon1.webp" alt="">
+                                    </span>
+                                    <h5>Spa ,beauty & health</h5>
+                                    <p><span>Spa and beauty</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, corporis.</p>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a data-bs-toggle="tab" href="#resturent">
+                                    <span class="service-icon">
+                                        <img src="./images/services/service-icon2.webp" alt="">
+                                    </span>
+                                    <h5>Restaurant</h5>
+                                    <p><span>Restaurant</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, corporis.</p>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a data-bs-toggle="tab" href="#swimming">
+                                    <span class="service-icon">
+                                        <img src="./images/services/service-icon3.webp" alt="">
+                                    </span>
+                                    <h5>Swimming Pool</h5>
+                                    <p><span>Swimming </span>Pool Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, corporis.</p>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a data-bs-toggle="tab" href="#conference">
+                                    <span class="service-icon">
+                                        <img src="./images/services/service-icon4.webp" alt="">
+                                    </span>
+                                    <h5>Conference Hall</h5>
+                                    <p><span>Conference </span>Pool Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, corporis.</p>
+                                </a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
 
 
 
+            </div>
+        </div>
 
+        <div class="counter mt-5">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h1>
+                            <span id="count1"></span>+
+                        </h1>
+                        <p>Happy Clients</p>
+                    </div>
+
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h1>
+                            <span id="count2"></span>+
+                        </h1>
+                        <p>New Friendship</p>
+                    </div>
+
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h1>
+                            <span id="count3"></span>+
+                        </h1>
+                        <p>Five Start Ratings</p>
+                    </div>
+
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h1>
+                            <span id="count4"></span>+
+                        </h1>
+                        <p>Served Breakfast</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- services section exit-->
 
 
     <!-- bootstrap 5 js cdn links -->
